# fitrl

./: .gitignore  Dockerfile  ENUMS_AND_INPUTS.md  ENUMS_QUICK_CARD.md  ENUMS_REFERENCE_TABLE.md  HACKATHON_REQUIREMENTS_CHECKLIST.md  PHASES_DETAILED_GUIDE.md  PHASES_QUICK_REFERENCE.md  README.md  SUBMISSION_GUIDE.md  __init__.py  app_ui.py  client.py  docker-compose.yml  hackathon_presentation.txt  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  fitrl_environment.py
